# BoatraceExpect

./: Cargo.toml  LICENSE
.github/workflows/: cron.yml  get_past.yml
docs/v1/2025/: 20251005.json  20251006.json  20251007.json  20251008.json  20251009.json  20251010.json  20251011.json  20251012.json  20251013.json  20251014.json  20251015.json  20251016.json  20251017.json  20251018.json  20251019.json  20251020.json  20251021.json  20251022.json  20251023.json  20251024.json  20251025.json  20251026.json  20251027.json  20251028.json  20251029.json  20251030.json  20251031.json  20251101.json  20251102.json  20251103.json  20251104.json  20251105.json  20251106.json  20251107.json  20251108.json  20251109.json  20251110.json  20251111.json  20251112.json  20251113.json  (+48 more)
docs/v1/2026/: 20260101.json  20260102.json  20260103.json  20260104.json  20260105.json  20260106.json  20260107.json  20260108.json  20260109.json  20260110.json  20260111.json  20260112.json  20260113.json  20260114.json  20260115.json  20260116.json  20260117.json  20260118.json  20260119.json  20260120.json  20260121.json  20260122.json  20260123.json  20260124.json  20260125.json  20260126.json  20260127.json  20260128.json  20260129.json  20260130.json  20260131.json  20260201.json  20260202.json  20260203.json  20260204.json  20260205.json  20260206.json  20260207.json  20260208.json  20260209.json  (+160 more)
docs/v3/: recorded_day.txt
docs/v3/2025/: 20250805.json  20250806.json  20250807.json  20250808.json  20250809.json  20250810.json  20250811.json  20250812.json  20250813.json  (+140 more)
src/: main.rs
(+205 files in other folders)
