[package]
name = "expect"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.3"
scraper = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
chrono-tz = "0.10.4"
chrono = "0.4.45"
rand = "0.10.1"
tokio = { version = "1.50.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
